# Vestaline-ASCOMFocuser

./: .gitignore  AGENTS.md  README.md
ASCOM_Driver/: ASCOM.Autofocus.Focuser.csproj  ASCOM.Autofocus.Focuser.sln  Build.bat  FocuserDriver.cs  FocuserSetupDialogForm.cs  test_focuser.js
ASCOM_Driver/Properties/: AssemblyInfo.cs
FocuserApp/: ASCOMFocuserService.cs  Build.bat  Config.cs  IFocusService.cs  MainForm.cs  Program.cs  README.md  SerialService.cs  autofocus.config
INDI_Driver/: AGENTS.md  CMakeLists.txt  README.md  deploy.sh  vestal_focuser.cpp  vestal_focuser.h
Installer/: README.md  setup.iss
Newtestapp/: Build.bat  Config.cs  MainForm.cs  README.md  SerialService.cs  autofocus.config
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
vestaline/: stepper.cpp  stepper.h  thermistor.cpp  vestaline_diag.py
vestaline.A328/: config.h  thermistor.h  vestaline.ino
vestaline.STM32/: README.md  config.h  stepper_a4988.cpp  stepper_a4988.h  thermistor.cpp  thermistor.h  vestaline_stm32.ino
